<resources>
    <string name="app_name">Google Image Search</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="enter_image_search">Enter image search</string>
    <string name="image_result">Image Result</string>
    <string name="image_title">Image Title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_set_filters">Set Filters</string>
    <string name="advanced_search_options">Advanced Search Options</string>
    <string name="advanced_filters">Advanced Filters</string>
    <string name="save">Save</string>

    <string name="connection_failure">Failed to connect to Google!</string>
    <string name="no_internet">There is no internet connection!</string>
    <string name="end_of_results">End of Google results</string>
    <string name="share_image_failed">Sharing of the image failed</string>
    <string name="image_load_failed">Failed to load the image</string>
    <string name="image_load_succeded">Success loading the image</string>

    <string name="sizes_prompt">Pick a size</string>
    <string name="colors_prompt">Pick a color</string>
    <string name="types_prompt">Pick a type</string>
    <string name="sites_prompt">Pick a site</string>

    <string name="size_filter_label">Image Size</string>
    <string name="color_filter_label">Color Filter</string>
    <string name="type_filter_label">Image Type</string>
    <string name="site_filter_label">Site Filter</string>
    <string name="share_label">Share</string>


    <string-array name="sizes_array">
        <item>any</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <string-array name="colors_array">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="types_array">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

</resources>
