<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#50ffcb">

,   <LinearLayout
       android:id="@+id/llSize"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tvFilterSize"
            android:text="@string/size_filter_label"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/spinnerFilterSize"
            android:entries="@array/sizes_array"
            android:prompt="@string/sizes_prompt" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llSize"
        android:id="@+id/llColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFilterColor"
            android:text="@string/color_filter_label"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerFilterColor"
            android:entries="@array/colors_array"
            android:prompt="@string/colors_prompt"
             android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llColor"
        android:id="@+id/llType">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFilterType"
            android:text="@string/type_filter_label"
            android:layout_weight="1"
             />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerFilterType"
            android:entries="@array/types_array"
            android:prompt="@string/types_prompt"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llType"
        android:id="@+id/llSite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFilterSite"
            android:layout_weight="1"
            android:text="@string/site_filter_label"
            android:layout_below="@+id/tvFilterColor" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etFilterSite"
            android:hint="@string/sites_prompt"
            android:layout_weight="1"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btSave"
        android:layout_below="@+id/llSite"
        android:layout_centerHorizontal="true" />

</RelativeLayout>